# payd

./: README.md  pyproject.toml  setup.cfg
src/payd/: client.py  models.py
