[metadata]
name = paydwrapper
version = 1.0.1
author = placesHQ
author_email = hello@placeshq.com
description = Python Wrapper for interacting with the Payd Payments API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/placesHQ/payd
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_packages()
install_requires =
    requests
python_requires = >=3.8
include_package_data = True
